@@ -1,5 +1,11 @@
 2008-01-07  Dan Williams  <dcbw@redhat.com>
 
+	* src/applet-compat.c
+		- (copy_one_wpa_private_key_password): don't convert entries that
+			were already converted
+
+2008-01-07  Dan Williams  <dcbw@redhat.com>
+
 	Fix gnome.org #359541, rh #220913, rh #220915
 
 	* src/applet.c
